KG-347 Fixing emission of dynamic literals without lexical info

--- a/vocabulary/src/main/resources/dialects/oas20.yaml
+++ b/vocabulary/src/main/resources/dialects/oas20.yaml
@@ -360,6 +360,10 @@ nodeMappings:
         propertyTerm: schema-org.description
         range: string
         mandatory: true
+      statusCode:
+        propertyTerm: hydra.statusCode
+        range: string
+        mandatory: true
       schema:
         propertyTerm: http.payload
         range: SchemaObject
