--- a/vocabulary/src/main/resources/dialects/oas20.yaml
+++ b/vocabulary/src/main/resources/dialects/oas20.yaml
@@ -2,9 +2,9 @@
 
 uses:
   doc: ../vocabularies/aml_doc.yaml
-  http: ../vocabularies/http.yaml
-  shapes: ../vocabularies/shapes.yaml
-  meta: ../vocabularies/meta.yaml
+  http: ../vocabularies/apiContract.yaml
+  shapes: ../vocabularies/data_shapes.yaml
+  meta: ../vocabularies/aml_meta.yaml
   security: ../vocabularies/security.yaml
 
 external:
